Added loggers and a flag indicating whether the customer has transactions or not.